[package]
name = "deploy-rs"
version = "0.1.2"
edition = "2018"
license = "MIT"
description = "Small and opinionated Rust web service deployment helper."
repository = "https://github.com/alianse777/deploy-rs.git"

[dependencies]
anyhow = "1.0.43"
cargo_toml = "0.9.2"
cmd_lib = "1.1.0"
log = "0.4.14"
rpassword = "5.0.1"
simple_logger = "1.13.0"
ssh2 = "0.9.1"
structopt = "0.3.22"
